--- a/JLT.Floorplan.App/Views/Shared/_NoNavLayout.cshtml
+++ b/JLT.Floorplan.App/Views/Shared/_NoNavLayout.cshtml
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Examonline | @ViewBag.Title</title>
+    <title>JLT Seat Management System | @ViewBag.Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="@Url.Content("~/libs/assets/animate.css/animate.css")" type="text/css" />
     <link rel="stylesheet" href="@Url.Content("~/libs/assets/font-awesome/css/font-awesome.min.css")" type="text/css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="@Url.Content("~/css/bootstrap-datetimepicker.css")" type="text/css" />
     <script src="@Url.Content("~/libs/jquery/jquery/dist/jquery.js")"></script>
     <script src="@Url.Content("~/libs/jquery/moment/moment.js")"></script>
-    <script src="@Url.Content("~/js/bootstrap-datetimepicker.js")"></script>  @*https://eonasdan.github.io/bootstrap-datetimepicker/*@
+    <script src="@Url.Content("~/js/bootstrap-datetimepicker.js")"></script> 
     <script src="@Url.Content("~/js/tracking-min.js")"></script>
     <script src="@Url.Content("~/js/face-min.js")"></script>
     <script>
@@ -25,11 +25,9 @@
     </script>
 </head>
 <body>
-    <div class="app app-header-fixed-examinee  ">
+    <div class="app app-header-fixed">
         <!-- header -->
-        
         <!-- / header -->
-
         <!-- content -->
         <div id="content" class="app-content" role="main">
             <div class="app-content-body ">
@@ -40,11 +38,11 @@
         <!-- / content -->
         <!-- footer -->
         <footer id="footer" class="app-footer" role="footer">
-        <div class="wrapper b-t bg-light">
-      <span class="pull-right">2.0.2 <a  ui-scroll="app" class="m-l-sm text-muted"><i class="fa fa-long-arrow-up"></i></a></span>
-    	&copy; 2018 www.jlt.com
-    </div>
-  </footer>
+            <div class="wrapper b-t bg-light">
+                <span class="pull-right">2.0.2 <a ui-scroll="app" class="m-l-sm text-muted"><i class="fa fa-long-arrow-up"></i></a></span>
+                &copy; 2018 www.india.jlt.com
+            </div>
+        </footer>
         <!-- / footer -->
     </div>
     <script src="@Url.Content("~/libs/jquery/bootstrap/dist/js/bootstrap.js")"></script>
