--- a/JLT.Floorplan.App/Views/Manage/Employee.cshtml
+++ b/JLT.Floorplan.App/Views/Manage/Employee.cshtml
@@ -1,35 +1,48 @@
 ﻿@using JLT.Common.Utility;
 @using JLT.Floorplan.Entity;
-@{    
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var authtoken = CommonUtility.LoggedInUser.authtoken;
     var RestAPI = CommonUtility.GetAppSettingKey(Constants.ApplicationConfiguration.RestServiceURL);
 }
-
+<link rel="stylesheet" href="@Url.Content("~/css/jquery.dataTables.min.css")" type="text/css" />
 <div class="wrapper-md">
     <button type="button" id="btnSyncEmployee" class="btn m-b-xs btn-sm btn-primary btn-addon"><i class="fa fa-download"></i>Sync Employee</button>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs m-t" role="tablist">
-        <li role="presentation" class="active"><a href="#active" aria-controls="active" role="tab"
-            data-toggle="tab">Employee List <span class="badge progress-bar-info" id="activebadge">0</span></a></li>
-        <li role="presentation"><a href="#inactive" aria-controls="inactive" role="tab" data-toggle="tab">
-           Employee(s) on Planned Leave <span class="badge progress-bar-info" id="inactivebadge">0</span></a></li>
+        <li role="presentation" class="active">
+            <a href="#active" aria-controls="active" role="tab"
+               data-toggle="tab">Employee List <span class="badge progress-bar-info" id="activebadge">0</span></a>
+        </li>
+        <li role="presentation">
+            <a href="#inactive" aria-controls="inactive" role="tab" data-toggle="tab">
+                Employee(s) on Leave <span class="badge progress-bar-info" id="inactivebadge">0</span>
+            </a>
+        </li>
     </ul>
-     <!-- Tab panes -->
+    <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="active">
-            <div class="row m-t" id="active_row">
+            <div class="row m-t table-responsive" id="active_row">
+                <table id="active_table" class="display" style="width:100%">
+                    <thead><tr><th>associateno</th><th>name</th><th>seatno</th><th>departmentname</th></tr></thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
         <div role="tabpanel" class="tab-pane" id="inactive">
-            <div class="row m-t" id="inactive_row">
+            <div class="row m-t table-responsive" id="inactive_row">
+                <table id="inactive_table" class="display" style="width:100%">
+                    <thead><tr><th>associateno</th><th>name</th><th>seatno</th><th>departmentname</th></tr></thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
 
 @section Scripts {
-<script type="text/javascript">
+    <script type="text/javascript">
     (function () {
         "use strict";
         var apiurl = '@RestAPI',
@@ -43,62 +56,57 @@
             UIEvents.SyncEmployee();
 
         });
+        var employees = '';
+        var aemployees = '';
         /************************************************* document.ready [End], CommonMethods [Start] *************************************************************/
         var CommonMethods = {
             Init: function () {
-                if (sessionStorage['_employee']) {
-                    CommonMethods.PopulateEmployee($.parseJSON(sessionStorage['_employee']));
-                } else {
-                    AjaxCalls.GetEmployee();
-                }
-            },
-            PopulateEmployee: function (TestsJson) {
-                $("#active_row").html('');
-                $("#inactive_row").html('');
-                var activecount = 0, inactivecount = 0, celldiv = null, thumbnaildiv = null, testnamespan = null, actionspan = null, activatespan = null;
-                for (var i = 0; i < TestsJson.length; i++) {
-                    celldiv = $('<div>').addClass('col-xs-6 col-md-3');
-                    thumbnaildiv = $('<div>').addClass('thumbnail bg-testlist');
-                    testnamespan = $('<span>').html(TestsJson[i].name);
-                    thumbnaildiv.append(testnamespan);
-                    if (TestsJson[i].isactive == 1) {
-                        actionspan = $('<span>').addClass('fr cursor-pointer archive-test').attr({ "data-toggle": "tooltip", "title": "archive", "testid": TestsJson[i].id }).html('<i class="fa fa-archive"></i>');
-                        thumbnaildiv.append(actionspan);
-                        celldiv.append(thumbnaildiv);
-                        $("#active_row").append(celldiv);
-                        activecount += 1;
-                    } else if (TestsJson[i].isactive == 0) {
-                        actionspan = $('<span>').addClass('fr cursor-pointer delete-test m-l-xs').attr({ "data-toggle": "tooltip", "title": "delete", "testid": TestsJson[i].id }).html('<i class="fa fa-trash"></i>');
-                        activatespan = $('<span>').addClass('fr cursor-pointer activate-test').attr({ "data-toggle": "tooltip", "title": "activate", "testid": TestsJson[i].id }).html('<i class="fa fa-reply"></i>');
-                        thumbnaildiv.append(actionspan);
-                        thumbnaildiv.append(activatespan);
-                        celldiv.append(thumbnaildiv);
-                        $("#inactive_row").append(celldiv);
-                        inactivecount += 1;
-                    }
-                }
-                $('#activebadge').html(activecount);
-                $('#inactivebadge').html(inactivecount);
+                AjaxCalls.GetEmployee();
+                $("#active_table").dataTable({
+                    data: employees,
+                    columns: [
+                        { data: 'associateno' },
+                        { data: 'name' },
+                        { data: 'seatno' },
+                        { data: 'departmentname' },
+                    ],
+                    "pageLength": 50
+                });
+
+                $("#inactive_table").dataTable({
+                    data: aemployees,
+                    columns: [
+                        { data: 'associateno' },
+                        { data: 'name' },
+                        { data: 'seatno' },
+                        { data: 'departmentname' },
+                    ],
+                    "pageLength": 50
+                });
+                $('#activebadge').html(employees.length);
+                $('#inactivebadge').html(aemployees.length);
                 $('[data-toggle="tooltip"]').tooltip();
-            }
+            },
         };
         /************************************************* CommonMethods [Ends], AjaxCalls [Start] *************************************************************/
         var AjaxCalls = {
             GetEmployee: function () {
                 var postData = "{ }";
                 $.ajax({
-                    url: apiurl + "SyncUtility/GetEmployee",
+                    url: apiurl + "Employee/GetEmployee",
                     type: "POST",
-                    async: true,
+                    async: false,
                     crossDomain: true,
                     beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', 'token ' + '@authtoken'); },
                     datatype: "json",
                     data: JSON.stringify(postData),
                     contentType: "application/json",
                     success: function (data) {
-                        //var response = $.parseJSON(data);
-                        sessionStorage.setItem('_employee', data.body);
-                        CommonMethods.PopulateTests($.parseJSON(data.body));
+                        employees = $.parseJSON(data.body);
+                        $.each(employees, function (i, s) {
+                            if (s.onleave) aemployees.push(s);
+                        });
+                       return false;
                     },
                     error: function (xhr, ajaxOptions, thrownError) {
                         e = $.parseJSON(xhr.responseText);
@@ -153,7 +161,7 @@
             },
             SaveSyncTestData: function (testList) {
                 $.ajax({
-                    url: apiurl + "SyncUtility/SyncTest",
+                    url: apiurl + "SyncUtility/SyncEmployee",
                     type: "POST",
                     async: true,
                     crossDomain: true,
@@ -183,6 +191,6 @@
         }
         /************************************************* UIEvents [Ends] *************************************************************/
     })();
-    
-</script>
+
+    </script>
 }
